--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name" translatable="false">Clucko</string>
     <string name="save">Save</string>
     <string name="delete">Delete</string>
+    <string name="today">Today</string>
     <string name="current_date">Current Date</string>
     <string name="daily_workload">Daily workload</string>
     <string name="edit_current_date">Edit Current date</string>
